Update authenticaation for user to include user roles