@@ -1,9 +1,11 @@
 package com.example.cooked_backend.model;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -14,6 +16,7 @@ public class CustomUserDetails implements UserDetails {
     private final String password;
     private final String firstName;
     private final String lastName;
+    private final UserRole role;
 
     public CustomUserDetails(User user) {
         this.id = user.getId();
@@ -21,6 +24,7 @@ public class CustomUserDetails implements UserDetails {
         this.password = user.getPassword();
         this.firstName = user.getFirstName();
         this.lastName = user.getLastName();
+        this.role = user.getRole();
     }
 
     public UUID getId() {
@@ -29,7 +33,9 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(
+                new SimpleGrantedAuthority("ROLE_" + role.name())
+        );
     }
 
     @Override
@@ -49,6 +55,10 @@ public class CustomUserDetails implements UserDetails {
 
     public String getLastName() {
         return lastName;
+    }
+
+    public UserRole getRole() { 
+        return role; 
     }
 
     @Override
